crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__child_block_let_after_text_is_text.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { so let it be }</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 26,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                        },
                                        value: Var(
                                            "x",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 26,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 11,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 25,
                                                            },
                                                        },
                                                        value: Text(
                                                            " so let it be ",
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
